Solve Sonar errors logger and use of Stream.toList() due to Java16